feat:修改主页新增3d模型，修改菜单

--- a/vue-demos/src/style.scss
+++ b/vue-demos/src/style.scss
@@ -42,3 +42,8 @@ body {
 *::-webkit-scrollbar-corner {
   background-color: transparent;
 }
+
+@font-face {
+  font-family: 'NNN';
+  src: url(@/assets/font/NNNouvelleGroteskSTD-BoldDiagonal.woff2);
+}
