--- a/vue-demos/src/style.scss
+++ b/vue-demos/src/style.scss
@@ -2,6 +2,10 @@
   font-family: 'NNN';
   src: url(@/assets/font/NNNouvelleGroteskSTD-BoldDiagonal.woff2);
 }
+@font-face {
+  font-family: '得意黑';
+  src: url(@/assets/font/SmileySans-Oblique.ttf.woff2);
+}
 
 * {
   margin: 0;
@@ -10,8 +14,10 @@
 }
 html,
 body {
+  font-family: 'NNN';
   width: 100%;
   height: 100%;
+  letter-spacing: 2px;
 }
 
 #app {
@@ -46,4 +52,9 @@ body {
 
 *::-webkit-scrollbar-corner {
   background-color: transparent;
+}
+
+:root {
+  --td-font-family: 'NNN', '得意黑';
+  --td-font-family-medium: 'NNN', '得意黑';
 }
