--- a/vue-demos/src/style.scss
+++ b/vue-demos/src/style.scss
@@ -6,6 +6,14 @@
   font-family: '得意黑';
   src: url(@/assets/font/SmileySans-Oblique.ttf.woff2);
 }
+@font-face {
+  font-family: '庞门正道';
+  src: url(@/assets/font/庞门正道标题体2.0增强版.ttf);
+}
+@font-face {
+  font-family: '庞门正道细线体';
+  src: url(@/assets/font/庞门正道细线体.ttf);
+}
 
 * {
   margin: 0;
@@ -55,6 +63,6 @@ body {
 }
 
 :root {
-  --td-font-family: 'NNN', '得意黑';
-  --td-font-family-medium: 'NNN', '得意黑';
+  --td-font-family: 'NNN', '庞门正道细线体';
+  --td-font-family-medium: 'NNN', '庞门正道细线体';
 }
