--- a/vue-demos/src/style.scss
+++ b/vue-demos/src/style.scss
@@ -8,11 +8,11 @@
 }
 @font-face {
   font-family: '庞门正道';
-  src: url(@/assets/font/庞门正道标题体2.0增强版.ttf);
+  src: url(@/assets/font/PangMenZhengDaoBiaoTi.ttf);
 }
 @font-face {
   font-family: '庞门正道细线体';
-  src: url(@/assets/font/庞门正道细线体.ttf);
+  src: url(@/assets/font/PangMenZhengDaoXiXianTi.ttf);
 }
 
 * {
