--- a/vue-demos/src/style.scss
+++ b/vue-demos/src/style.scss
@@ -26,6 +26,10 @@ body {
   width: 100%;
   height: 100%;
   letter-spacing: 2px;
+  background-color: var(--td-bg-color-page);
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 #app {
