--- a/vue-demos/src/style.scss
+++ b/vue-demos/src/style.scss
@@ -1,72 +1,3 @@
-@font-face {
-  font-family: 'NNN';
-  src: url(@/assets/font/NNNouvelleGroteskSTD-BoldDiagonal.woff2);
-}
-@font-face {
-  font-family: '得意黑';
-  src: url(@/assets/font/SmileySans-Oblique.ttf.woff2);
-}
-@font-face {
-  font-family: '庞门正道';
-  src: url(@/assets/font/PangMenZhengDaoBiaoTi.ttf);
-}
-@font-face {
-  font-family: '庞门正道细线体';
-  src: url(@/assets/font/PangMenZhengDaoXiXianTi.ttf);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html,
-body {
-  font-family: 'NNN';
-  width: 100%;
-  height: 100%;
-  letter-spacing: 2px;
-  background-color: var(--td-bg-color-page);
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-#app {
-  min-width: 1360px;
-  min-height: 780px;
-  width: 100%;
-  height: 100%;
-}
-
-*::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: rgba(187, 187, 187, 0.2);
-  border-radius: 4px;
-  transition-duration: 233ms;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(187, 187, 187, 1);
-}
-
-*::-webkit-scrollbar-thumb:active {
-  background-color: rgba(187, 187, 187, 1);
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-corner {
-  background-color: transparent;
-}
-
-:root {
-  --td-font-family: 'NNN', '庞门正道细线体';
-  --td-font-family-medium: 'NNN', '庞门正道细线体';
-}
+@import url(@/assets/css/font.scss);
+@import url(@/assets/css/base.scss);
+@import url(@/assets/css/reset.scss);
