--- a/vue-demos/src/style.scss
+++ b/vue-demos/src/style.scss
@@ -1,3 +1,4 @@
 @import url(@/assets/css/font.scss);
 @import url(@/assets/css/base.scss);
 @import url(@/assets/css/reset.scss);
+@import url(@/assets/css/var.scss);
