feat:朴素化页面布局，新增样式变量，新增codepen笔记，修改网格布局

--- a/vue-demos/src/assets/css/var.scss
+++ b/vue-demos/src/assets/css/var.scss
@@ -9,5 +9,7 @@
   --bg-page: #1b262c;
   --msg-zi: 9999;
   --popover-bg: rgba(72, 80, 85, 0.8);
-  --border-color: rgba(255, 255, 255, 0.7);
+  --color-border: rgba(255, 255, 255, 0.7);
+  --color-brand-bg: rgb(100, 75, 75);
+  --color-brand-fill: rgb(125, 125, 125);
 }
