--- a/vue-demos/src/assets/css/base.scss
+++ b/vue-demos/src/assets/css/base.scss
@@ -1,7 +1,10 @@
 * {
+  box-sizing: border-box;
+}
+
+div {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 html,
@@ -9,17 +12,17 @@ body {
   width: 100%;
   height: 100%;
   letter-spacing: 2px;
+  margin: 0;
+  padding: 0;
 
   &::-webkit-scrollbar {
     display: none;
   }
 }
 
-#app {
+body {
   min-width: 1360px;
   min-height: 780px;
-  width: 100%;
-  height: 100%;
   font-family: var(--font-f);
   color: #fff;
   background-color: var(--bg-page);
