--- a/vue-demos/src/assets/css/reset.scss
+++ b/vue-demos/src/assets/css/reset.scss
@@ -1,96 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -104,9 +11,6 @@ menu,
 nav,
 section {
   display: block;
-}
-body {
-  line-height: 1;
 }
 ol,
 ul,
@@ -134,4 +38,42 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+* {
+  outline: none;
+  &:focus {
+    outline: none;
+  }
+}
+
+fieldset {
+  margin: 0;
+}
+
+legend {
+  border: 2px dashed var(--color-border);
+  padding: 0.5rem 1rem;
+  font-weight: bold;
+  &[size='small'] {
+    font-size: small;
+    padding: 0.2rem 0.4rem;
+  }
+}
+
+button {
+  cursor: pointer;
+  padding: 0.3rem 0.6rem;
+  border: none;
+  font-size: 14px;
+  &[block] {
+    width: 100%;
+  }
+}
+
+select {
+  cursor: pointer;
+  border: none;
+  padding: 0.3rem 0.6rem;
+  font-size: 14px;
 }
