feat: 新增贪吃蛇小游戏组件

--- a/vue-demos/src/assets/css/var.scss
+++ b/vue-demos/src/assets/css/var.scss
@@ -10,6 +10,10 @@
   --msg-zi: 9999;
   --popover-bg: rgba(72, 80, 85, 0.8);
   --color-border: rgba(255, 255, 255, 0.7);
+  --color-border-light: rgba(255, 255, 255, 0.2);
   --color-brand-bg: rgb(100, 75, 75);
+  --color-brand-bg-light: rgba(100, 75, 75, 0.5);
+  --color-brand-bg-hover: rgba(100, 75, 75, 0.8);
+  --color-brand-bg-active: rgba(100, 75, 75, 0.6);
   --color-brand-fill: rgb(125, 125, 125);
 }
