feat(juejin-notes): 实现文章动态加载与全屏查看功能
掘金笔记页面现在能够动态加载文章，并支持双击文章以全屏模式查看。通过引入`VueShowdown`组件和调整CSS样式，增强了用户阅读体验。此外，重命名和整理了文章文件夹结构，以提高可维护性。

--- a/vue-demos/src/style.scss
+++ b/vue-demos/src/style.scss
@@ -2,3 +2,4 @@
 @import url(@/assets/css/base.scss);
 @import url(@/assets/css/reset.scss);
 @import url(@/assets/css/var.scss);
+@import url(@/assets/css/animation.css);
