```css 修改动画和页面加载样式，调整代码Pen组件样式。
- 在animation.css中新增loadingContent动画，用于显示加载过程中的动态内容。
- 修改reset.scss中的按钮样式，调整hover和active状态的box-shadow。
- 更新var.scss，更改背景页颜色变量以优化页面外观。
- 重构codepen.vue组件，增加延迟加载功能并改善样式。
- 调整codepen-notes.vue中展示组件的加载顺序和缩放比例。
- 更新useComponentsData.ts，修改某些展示组件的大小和缩放比例以提升布局效果。
```

--- a/vue-demos/src/assets/css/reset.scss
+++ b/vue-demos/src/assets/css/reset.scss
@@ -72,10 +72,10 @@ button {
   font-weight: bolder;
   transition: all 0.2s;
   &:hover {
-    box-shadow: 0 0 0 2px #fff;
+    box-shadow: 0 0 10px 2px rgba(41, 116, 221, 0.77);
   }
   &:active {
-    box-shadow: 0 0 0 2px #ffffffa4;
+    box-shadow: 0 0 10px 2px rgba(221, 158, 41, 0.204);
   }
   &[block] {
     display: block;
