--- a/vue-demos/src/assets/css/var.scss
+++ b/vue-demos/src/assets/css/var.scss
@@ -6,7 +6,7 @@
   --header-h: 3em;
   --footer-h: 2em;
   --main-h: calc(100% - var(--header-h) - var(--footer-h));
-  --bg-page: #1b262c;
+  --bg-page: #1a1a1a;
   --msg-zi: 9999;
   --popover-bg: rgba(72, 80, 85, 0.8);
   --color-border: rgba(255, 255, 255, 0.7);
