--- a/vue-demos/src/assets/css/animation.css
+++ b/vue-demos/src/assets/css/animation.css
@@ -45,3 +45,21 @@
     animation-timeline: view();
   }
 }
+
+@keyframes loadingContent {
+  0% {
+    content: '加载中';
+  }
+
+  33.33% {
+    content: '加载中.';
+  }
+
+  66.66% {
+    content: '加载中..';
+  }
+
+  100% {
+    content: '加载中...';
+  }
+}
