refactor(juejin-notes): 实现CollapsePanel组件并调整文章布局
- 将CollapsePanel组件引入文章列表，为每篇文章添加折叠功能。
- 通过计算属性生成文章标题列表，优化文章渲染性能。
- 调整jn-article样式，增强文章在折叠面板中的视觉效果。
- 修改网格布局的列数，适应CollapsePanel组件的宽度要求。
- 修复文章内容在双击时无法进入全屏模式的问题。

--- a/vue-demos/src/assets/css/reset.scss
+++ b/vue-demos/src/assets/css/reset.scss
@@ -41,10 +41,16 @@ table {
 }
 
 * {
+  box-sizing: border-box;
   outline: none;
   &:focus {
     outline: none;
   }
+}
+
+div {
+  margin: 0;
+  padding: 0;
 }
 
 fieldset {
