feat(全局组件和页面)
本次提交包括对多个全局组件和页面的设计与样式更新。具体变化如下：

- **`layout-header`**：为顶部导航菜单添加了固定定位，引入了新的背景渐变和阴影效果，以增强视觉层次。
- **`layout-footer`**：更新了底部版权信息的展示样式，使其居中显示，同时优化了响应式设计。
- **`collapse-panel`**：调整了折叠面板的边框和背景色，使其与新的设计语言保持一致。
- **`nest-view`**：优化了嵌套视图组件的布局，去除了多余的边框和内边距。
- **其他调整**：移除了base.scss中注释掉的字体声明，修正了var.scss中的变量定义，确保一致性和清晰度。

--- a/vue-demos/src/assets/css/var.scss
+++ b/vue-demos/src/assets/css/var.scss
@@ -5,7 +5,7 @@
   --font-f: 'NNN', '庞门正道细线体', Inter, var(--font-fallback);
   --header-h: 3em;
   --footer-h: 2em;
-  --main-h: calc(100% - var(--header-h) - var(--footer-h));
+  --main-h: calc(100% - var(--footer-h));
   --bg-page: #1a1a1a;
   --msg-zi: 9999;
   --popover-bg: rgba(72, 80, 85, 0.8);
@@ -16,4 +16,8 @@
   --color-brand-bg-hover: rgba(100, 75, 75, 0.8);
   --color-brand-bg-active: rgba(100, 75, 75, 0.6);
   --color-brand-fill: rgb(125, 125, 125);
+  --apple-music-primary: #fa2d48;
+  --apple-music-default: #7e7d7d;
+  --apple-music-bg-darken: #060605;
+  --apple-music-bg-lighten: #242528;
 }
