--- a/vue-demos/src/assets/css/var.scss
+++ b/vue-demos/src/assets/css/var.scss
@@ -2,7 +2,7 @@
   --font-fallback: BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
     'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   --font-body: Inter, var(--font-fallback);
-  --font-f: 'NNN', '庞门正道细线体', Inter, var(--font-fallback);
+  --font-f: 'NNN', Inter, var(--font-fallback);
   --header-h: 3em;
   --footer-h: 2em;
   --main-h: calc(100% - var(--footer-h));
