--- a/vue-demos/src/assets/css/base.scss
+++ b/vue-demos/src/assets/css/base.scss
@@ -23,7 +23,7 @@ body {
 body {
   min-width: 1360px;
   min-height: 780px;
-  // font-family: var(--font-f);
+  font-family: var(--font-f);
   color: #fff;
   background-color: var(--bg-page);
 }
