feat(juejin-notes): 添加深色主题变量并优化文章目录和内容布局

--- a/vue-demos/src/assets/css/var.scss
+++ b/vue-demos/src/assets/css/var.scss
@@ -17,6 +17,7 @@
   --color-brand-bg-active: rgba(100, 75, 75, 0.6);
   --color-brand-fill: rgb(125, 125, 125);
   --apple-music-primary: #fa2d48;
+  --apple-music-primary-darken: #fa2d485e;
   --apple-music-default: #7e7d7d;
   --apple-music-bg-darken: #060605;
   --apple-music-bg-lighten: #242528;
