--- a/vue-demos/src/assets/css/base.scss
+++ b/vue-demos/src/assets/css/base.scss
@@ -14,6 +14,7 @@ body {
   letter-spacing: 2px;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 
   &::-webkit-scrollbar {
     display: none;
